<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello World!</string>
    <string name="img_content_desc">Content description&#8230;</string>
    <string name="passwordreset_usedEmail">Hey welcome back! You\'ve signed up with that email before. Reset the password here.</string>
    <string name="passwordreset_warning">It looks like you haven\'t signed up with that email before! Go register for great high quality adult content.</string>
    <string name="onetapreg_MiKandi_welcome">Welcome to MiKandi</string>
    <string name="onetapreg_We_are_MiKandi">Join our 4.5 million customers for the best free porn, apps, and games. No credit card required. No hidden fees. </string>
    <string name="onetapreg_emailpromptString">Email address</string>
    <string name="onetapreg_usernamepromptString">Username</string>
    <string name="onetapreg_buttonString">Tap to Register!</string>
    <string name="onetapreg_taptoEdit"><i>tap to edit</i></string>
    <string name="onetapreg_oneTap_Signin">Sign in</string>
    <string name="onetapreg_AltUsernameWarning">Username in use, we have generated another one for you!</string>
    <string name="onetapreg_checkBox_string">Would you like to sign up for MiKandi news?</string>
    <string name="onetapreg_username_error">Username must only contain letters, numbers, \'_\'  and \'-\' and be long than 4 characters</string>
    <string name="dev_email_type">message/rfc822</string>
    <string name="login_username_prompt">Username</string>
    <string name="login_password_promt">Password</string>
    <string name="passwordReset_btn_string_send">Send</string>
    <string name="passwordReset_btn_string_cancel">Cancel</string>
    <string name="passwordReset_btn_string_login">Login</string>
    <string name="passwordReset_string_header">Forgot your password?</string>
    <string name="passwordReset_string_header2">Enter the email address you registered with and we\'ll send you a new one.</string>
    <string name="emailCheck_text_gotMail">You\'ve got Mail!</string>
    <string name="emailCheck_text_pleaseCheck">Check your inbox for your new password. Be sure to check your spam folder if you don\'t see it.</string>
    <string name="emailCheck_btn_Cancel">Cancel</string>
    <string name="emailCheck_btn_login">Login</string>
    <string name="login_string_header">Welcome back!</string>
    <string name="login_string_passError">Password you signed up with should be longer!</string>
    <string name="login_string_forgotbtn">Forgot password?</string>
    <string name="login_btn_loginbtn">Login</string>
    <string name="login_inapp_welcomeMessage">Log into your Mikandi account to access this application.</string>
	<string name ="app_name">KandiBilling tools</string>
    <string name ="toast_cant_open_client">Toast can\'t open!</string>
    
    
    <!-- intent strings -->
    <string name="intent_scheme_mailto">mailto</string>
</resources>